tests/snapshots/sfc/ts/script_setup__computed_with_route_params.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { computed } from "vue";
import { useRoute } from "vue-router";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    const route = useRoute();
    const studentId = computed(() => route.params.studentId ? parseInt(route.params.studentId) : null);
    const __returned__ = {
      computed,
      route,
      studentId,
      useRoute
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($setup.studentId), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
