tests/snapshots/sfc/ts/script_setup__defineemits_array_syntax.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { defineComponent as _defineComponent } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  emits: ["update", "change"],
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const emit = __emit;
    function onClick() {
      emit("update", 1);
    }
    const __returned__ = {
      emit,
      onClick
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", { onClick: $setup.onClick }, "Click", 8 /* PROPS */, ["onClick"]))
}

__sfc__.render = render
export default __sfc__
